# PalhanoCG

./: .gitignore  CMakeLists.txt  README.md  cubo.txt  run.sh
assets/models/2b/: nierautomata__2b.mtl
assets/models/3em1/: 3 em 1.mtl
assets/models/bike/: bike.mtl
assets/models/caminhador/: caminhador.mtl
assets/models/casa1/: model.mtl
assets/models/cat/: cat_-_ps1_low_poly_rigged.mtl
assets/models/esqueleto/: skeleton_character_psx.mtl
assets/models/gtr/: Nissan GTR.mtl
assets/models/miku/: miku_brazilian_fbx__rig(2).mtl
assets/models/pendurador/: da p se pendurar.mtl
assets/models/pig/: pig.mtl
assets/models/saitama/: saitama_ultimate_mode.mtl
assets/models/su/: russian_su-25.mtl
assets/models/tree/: stylized_hand-painted_tree.mtl
assets/shaders/: basic.vs.glsl  billboard.fs.glsl  billboard.vs.glsl  default.fs.glsl  default.vs.glsl  skybox.vs.glsl  terrain.fs.glsl  terrain.vs.glsl
include/: Camera.hpp  Game.hpp  InputHandler.hpp  Mesh.hpp  Model.hpp  Player.hpp  Renderer.hpp  ResourceManager.hpp  Shader.hpp  Skybox.hpp  Terrain.hpp  TextRenderer.hpp  Texture.hpp  Vao.hpp  Vbo.hpp  Window.hpp  camera.hpp  ebo.hpp  mesh.hpp  model.hpp  shader.hpp  skybox.hpp  terrain.hpp  textRenderer.hpp  texture.hpp  vao.hpp  vbo.hpp
include/glad/: glad.h
libs/glad/: glad.c
shaders/: billboard.vs.glsl  debug.vs.glsl  default.fs.glsl  default.vs.glsl  font.vs.glsl  skybox.fs.glsl  sprite_ui.fs.glsl  sprite_ui.vs.glsl  terrain.fs.glsl  terrain.vs.glsl
src/: Camera.cpp  Ebo.cpp  Game.cpp  InputHandler.cpp  Mesh.cpp  Model.cpp  Player.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Skybox.cpp  Terrain.cpp  TextRenderer.cpp  Texture.cpp  Vao.cpp  Vbo.cpp  Window.cpp  camera.cpp  ebo.cpp  errorReporting.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp  skybox.cpp  terrain.cpp  textRenderer.cpp  texture.cpp  vao.cpp  vbo.cpp
src/core/: Billboard.cpp  Billboard.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Window.cpp
src/engine/core/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp
src/engine/game/player/: Camera.cpp  Camera.hpp  Player.cpp  Player.hpp
src/engine/game/world/: Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp
src/engine/graphics/: Billboard.cpp  Billboard.hpp  Ebo.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  UI.cpp  UI.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp
src/engine/input/: InputHandler.cpp  InputHandler.hpp
src/engine/resources/: ResourceManager.cpp  ResourceManager.hpp
src/engine/utils/: Globals.hpp  errorReporting.cpp
src/graphics/: Ebo.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/player/: Camera.cpp  Camera.hpp  Player.cpp  Player.hpp
src/resources/: ResourceManager.cpp  ResourceManager.hpp
src/utils/: Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  errorReporting.cpp  errorReporting.hpp
src/world/: Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp
